// Copyright 2022 Datafuse Labs.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package databend_proto;


message AuthInfo {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  message None {}
  message Password {
    enum PasswordHashMethod {
      PlainText = 0;
      DoubleSha1 = 1;
      Sha256 = 2;
    }
    bytes hash_value = 1;
    PasswordHashMethod hash_method = 2;
    optional bool need_change = 3;
  }
  message JWT {}

  oneof info {
    None none = 1;
    Password password = 2;
    JWT jwt = 3;
  }
}

message GrantObject {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  message GrantGlobalObject {}

  message GrantDatabaseObject {
    string catalog = 1;
    string db = 2;
  }

  message GrantDatabaseIdObject {
    string catalog = 1;
    uint64 db = 2;
  }

  message GrantTableObject {
    string catalog = 1;
    string db = 2;
    string table = 3;
  }

  message GrantTableIdObject {
    string catalog = 1;
    uint64 db = 2;
    uint64 table = 3;
  }

  message GrantUdfObject {
    string udf = 1;
  }

  message GrantStageObject {
    string stage = 1;
  }

  message GrantWarehouseObject {
    string warehouse = 1;
  }

  oneof object {
    GrantGlobalObject global = 1;
    GrantDatabaseObject database = 2;
    GrantTableObject table = 3;
    GrantUdfObject udf = 4;
    GrantStageObject stage = 5;
    GrantDatabaseIdObject databasebyid = 6;
    GrantTableIdObject tablebyid = 7;
    GrantWarehouseObject warehouse = 8;
  }
}

message GrantEntry {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  GrantObject object = 1;
  uint64 privileges = 2;
}

message UserGrantSet {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  repeated GrantEntry entries = 1;
  map<string, bool> roles = 2;
}

message UserQuota {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  uint64 max_cpu = 1;
  uint64 max_memory_in_bytes = 2;
  uint64 max_storage_in_bytes = 3;
}

message UserOption {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  uint64 flags = 1;
  optional string default_role = 2;
  optional string network_policy = 3;
  optional string password_policy = 4;
  optional bool disabled = 5;
  optional bool must_change_password = 6;
  optional string workload_group = 7;
}

message UserInfo {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string name = 1;
  string hostname = 2;
  AuthInfo auth_info = 3;
  UserGrantSet grants = 4;
  UserQuota quota = 5;
  UserOption option = 6;
  repeated AuthInfo history_auth_infos = 7;
  repeated string password_fails = 8;
  optional string password_update_on = 9;
  optional string lockout_time = 10;
  // The time user created.
  optional string created_on = 11;
  // The time user update.
  optional string update_on = 12;
}

message UserIdentity {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string username = 1;
  string hostname = 2;
}

message NetworkPolicy {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string name = 1;
  repeated string allowed_ip_list = 2;
  repeated string blocked_ip_list = 3;
  string comment = 4;
  string create_on = 5;
  optional string update_on = 6;
}

message PasswordPolicy {
  uint64 ver = 100;
  uint64 min_reader_ver = 101;

  string name = 1;
  uint64 min_length = 2;
  uint64 max_length = 3;
  uint64 min_upper_case_chars = 4;
  uint64 min_lower_case_chars = 5;
  uint64 min_numeric_chars = 6;
  uint64 min_special_chars = 7;
  uint64 min_age_days = 8;
  uint64 max_age_days = 9;
  uint64 max_retries = 10;
  uint64 lockout_time_mins = 11;
  uint64 history = 12;
  string comment = 13;
  string create_on = 14;
  optional string update_on = 15;
}
